Liens dynamiques réussis

--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -23,14 +23,14 @@
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Nos produits</h4>
-                            <a href="{% url 'produit' numero=1 %}"><i class="fas fa-angle-right me-2"></i> Automobile</a>
-                            <a href="{% url 'produit' numero=2 %}"><i class="fas fa-angle-right me-2"></i> Santé </a>
-                            <a href="{% url 'produit' numero=3 %}"><i class="fas fa-angle-right me-2"></i> Individuelle Accidents </a>
-                            <a href="{% url 'produit' numero=4 %}"><i class="fas fa-angle-right me-2"></i> Voyage </a>
-                            <a href="{% url 'produit' numero=5 %}"><i class="fas fa-angle-right me-2"></i> Habitation</a>
-                            <a href="{% url 'produit' numero=6 %}"><i class="fas fa-angle-right me-2"></i> Transport </a>
-                            <a href="{% url 'produit' numero=7 %}"><i class="fas fa-angle-right me-2"></i> Caution </a>
-                            <a href="{% url 'produit' numero=8 %}"><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
+                            <a href="{% url 'produit' numero=products_keys.0 %}"><i class="fas fa-angle-right me-2"></i> Automobile</a>
+                            <a href="{% url 'produit' numero=products_keys.1 %}"><i class="fas fa-angle-right me-2"></i> Santé </a>
+                            <a href="{% url 'produit' numero=products_keys.2 %}"><i class="fas fa-angle-right me-2"></i> Individuelle Accidents </a>
+                            <a href="{% url 'produit' numero=products_keys.3 %}"><i class="fas fa-angle-right me-2"></i> Voyage </a>
+                            <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Habitation</a>
+                            <a href="{% url 'produit' numero=products_keys.5 %}"><i class="fas fa-angle-right me-2"></i> Transport </a>
+                            <a href="{% url 'produit' numero=products_keys.6 %}"><i class="fas fa-angle-right me-2"></i> Caution </a>
+                            <a href="{% url 'produit' numero=products_keys.7 %}"><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
                         </div>
                     </div>
 
