--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -22,26 +22,29 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5">
-                    <div class="h-100" style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">
+                    {% comment %} <div class="h-100" style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">#B99470 {% endcomment %}
+                    <div class="h-100" style="border: 50px solid; border-color: transparent #B99470 transparent #B99470;">
                         <img src="{% static 'img/about-img.jpg' %}" class="img-fluid w-100 h-100" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                     <h5 class="section-about-title pe-3">Qui somme nous ?</h5>
                     <h1 class="mb-4">Bienvenue à <span class="text-primary">Saar Assurances</span></h1>
-                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorum, doloribus sunt dicta, officia voluptatibus libero necessitatibus natus impedit quam ullam assumenda? Id atque iste consectetur. Commodi odit ab saepe!</p>
-                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p>
+                    <p class="mb-4">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
+                    <p class="mb-4">Le directeur général actuel est <strong>Monsieur KENGNE Wafo Loïc Armel</strong>, poste occupé depuis le 25 Novembre 2021.</p>
+
+                    {% comment %} <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p> {% endcomment %}
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>201-500 employés</p>
                         </div>
+                        {% comment %} <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Fondée en 1990</p>
+                        </div> {% endcomment %}
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Handpicked Hotels</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Spécialisations : Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
                         </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>5 Star Accommodations</p>
-                        </div>
-                        <div class="col-sm-6">
+                        {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
                         </div>
                         <div class="col-sm-6">
@@ -49,9 +52,9 @@
                         </div>
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Read More</a>
+                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="https://www.youtube.com/watch?v=lF5Ei5ArOz0&t=2s">Vidéo de présentation</a>
                 </div>
             </div>
         </div>
@@ -62,27 +65,28 @@
     <div class="container-fluid guide py-5">
         <div class="container py-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">Travel Guide</h5>
-                <h1 class="mb-0">Meet Our Guide</h1>
+                <h5 class="section-title px-3">DIRECTION GENERALE</h5>
+                {% comment %} <h1 class="mb-0">Meet Our Guide</h1> {% endcomment %}
             </div>
-            <div class="row g-4">
+            <div class="row g-4 justify-content-center">
                 <div class="col-md-6 col-lg-3">
                     <div class="guide-item">
                         <div class="guide-img">
                             <div class="guide-img-efects">
+                                {% comment %} <img src="{% static 'img/guide-1.jpg' %}" class="img-fluid w-100 rounded-top" alt="Image"> {% endcomment %}
                                 <img src="{% static 'img/guide-1.jpg' %}" class="img-fluid w-100 rounded-top" alt="Image">
                             </div>
                             <div class="guide-icon rounded-pill p-2">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                {% comment %} <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a> {% endcomment %}
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="guide-title text-center rounded-bottom p-4">
                             <div class="guide-title-inner">
-                                <h4 class="mt-3">Full Name</h4>
-                                <p class="mb-0">Designation</p>
+                                <h4 class="mt-3">KENGNE Wafo Loïc Armel</h4>
+                                <p class="mb-0">Directeur Général</p>
                             </div>
                         </div>
                     </div>
@@ -95,20 +99,20 @@
                             </div>
                             <div class="guide-icon rounded-pill p-2">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                {% comment %} <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a> {% endcomment %}
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="guide-title text-center rounded-bottom p-4">
                             <div class="guide-title-inner">
-                                <h4 class="mt-3">Full Name</h4>
-                                <p class="mb-0">Designation</p>
+                                <h4 class="mt-3">TEMOLE KUATE Yannick Endelson</h4>
+                                <p class="mb-0">Directeur Financier</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                {% comment %} <div class="col-md-6 col-lg-3">
                     <div class="guide-item">
                         <div class="guide-img">
                             <div class="guide-img-efects">
@@ -149,7 +153,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
