--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -12,10 +12,10 @@
                             {% comment %} <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a> {% endcomment %}
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
-                                <a class="btn-square btn btn-primary rounded-circle mx-1" href="https://www.facebook.com/saarassurances.ci"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn-square btn btn-primary rounded-circle mx-1" target="_blank" href="https://www.facebook.com/saarassurances.ci"><i class="fab fa-facebook-f"></i></a>
                                 {% comment %} <a class="btn-square btn btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn-square btn btn-primary rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a> {% endcomment %}
-                                <a class="btn-square btn btn-primary rounded-circle mx-1" href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn-square btn btn-primary rounded-circle mx-1" target="_blank" href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
