Quelques changements ajoutés

--- a/src/saar_website/templates/saar_website/agences.html
+++ b/src/saar_website/templates/saar_website/agences.html
@@ -58,8 +58,9 @@
                             </div>
                         </div>
                         <div class="blog-content border border-top-0 rounded-bottom p-4">
-                            <a href="#" class="h4">Bureau Direct Cocody Rivera 3</a>
-                            <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
+                            <a href="#" class="h4">Bureau Direct Cocody Rivera</a>
+                            <p class="my-3">Rivera 3, Abidjan</p>
+                            <p class="my-3">Tél : +225 07 89 53 12 28</p>
                             <a href="https://maps.app.goo.gl/4BRpzo7fZQcPLxW79" class="btn btn-primary rounded-pill py-2 px-4">Itinéraire</a>
                         </div>
                     </div>
@@ -95,7 +96,8 @@
                         </div>
                         <div class="blog-content border border-top-0 rounded-bottom p-4">
                             <a href="#" class="h4">Bureau Direct Bietry</a>
-                            <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
+                            <p class="my-3">Non loin de l'église Notre Dame d'Afrique de Bietry, Abidjan</p>
+                            <p class="my-3">Tél : +225 07 87 05 76 33</p>                            
                             <a href="https://maps.app.goo.gl/CD4t4f7qA58KSSQb9" class="btn btn-primary rounded-pill py-2 px-4">Itinéraire</a>
                         </div>
                     </div>
@@ -149,7 +151,8 @@
                         </div>
                         <div class="blog-content border border-top-0 rounded-bottom p-4">
                             <a href="#" class="h4">Bureau Direct Takaful Treichville</a>
-                            <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
+                            <p class="my-3">Carrefour ex cinéma entente, Treichville, Abidjan</p>
+                            <p class="my-3">Tèl : +225 07 57 82 55 47</p>
                             <a href="https://maps.app.goo.gl/uA5m7Xp7RbxZrira7" class="btn btn-primary rounded-pill py-2 px-4">Itinéraire</a>
                         </div>
                     </div>
