--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -24,7 +24,8 @@
                 <div class="col-lg-5">
                     {% comment %} <div class="h-100" style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">#B99470 {% endcomment %}
                     <div class="h-100" style="border: 50px solid; border-color: transparent #B99470 transparent #B99470;">
-                        <img src="{% static 'img/saar_img_1.png' %}" class="img-fluid w-100 h-100" alt="">
+                        {% comment %} <img src="{% static 'img/saar_img_1.png' %}" class="img-fluid w-100 h-100" alt=""> {% endcomment %}
+                        <img src="{% static 'img/saar_assurances2.jpg' %}" class="img-fluid w-100 h-100" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/saar_img_1.png);">
