--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -36,8 +36,9 @@
 
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Saar Côte d'Ivoire</h4>
-                            <a href="{% url 'about' %}"><i class="fas fa-angle-right me-2"></i> A propos de nous </a>
+                            <h4 class="mb-4 text-white">Notre société</h4>
+                            <a href="{% url 'about_grp' %}"><i class="fas fa-angle-right me-2"></i> Le Groupe Saar </a>
+                            <a href="{% url 'about' %}"><i class="fas fa-angle-right me-2"></i> Saar Assurances Côte d'Ivoire </a>
                             {% comment %} <a href="#"><i class="fas fa-angle-right me-2"></i> Direction Générale</a> {% endcomment %}
                             <a href="{% url 'agences' %}"><i class="fas fa-angle-right me-2"></i> Nos Agences</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
