--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -11,16 +11,16 @@
             <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Notre Société</a></li>
                 {% comment %} <li class="breadcrumb-item"><a href="#">Pages</a></li> {% endcomment %}
-                <li class="breadcrumb-item active text-white">A propos de nous</li>
+                <li class="breadcrumb-item active text-white">Saar Assurances Côte d'Ivoire</li>
             </ol>    
         </div>
     </div>
     <!-- Header End -->
 
     <!-- About Start -->
-    <div class="container-fluid about py-5">
-        <div class="container py-5">
-            <div class="row g-5 align-items-center">
+    <div class="container-fluid about bg-light py-5">
+        <div class="container py-2">
+            <div class="row justify-content-center">
                 <div class="col-lg-6">
                     {% comment %} <div class="h-100" style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">#B99470 {% endcomment %}
                     {% comment %} <div class="h-100" style="border: 50px solid; border-color: transparent #D6B033 transparent #D6B033;"> {% endcomment %}
@@ -30,7 +30,8 @@
                         <iframe width="600" height="400" src="https://www.youtube.com/embed/lF5Ei5ArOz0?si=4acVZP64dmBruxlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     {% comment %} </div> {% endcomment %}
                 </div>
-                <div class="col-lg-6" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/saar_img_1.png);">
+                {% comment %} <div class="col-lg-6" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/saar_img_1.png);"> {% endcomment %}
+                <div class="col-lg-6">
                     <h5 class="section-about-title pe-3">Qui somme nous ?</h5>
                     <h1 class="mb-4">Bienvenue à <span class="text-primary">Saar Assurances</span></h1>
                     <p class="mb-4">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
