--- a/src/saar_website/templates/saar_website/about_grp.html
+++ b/src/saar_website/templates/saar_website/about_grp.html
@@ -56,6 +56,11 @@
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Siège social : Douala, Cameroun </p>
                         </div>
+                        {% comment %} <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Linkedin : <a class="btn-square btn btn-primary rounded-circle mx-1" target="_blank" href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/"><i class="fab fa-linkedin-in"></i></a>
+                            </p>
+                        </div> {% endcomment %}
+
                     </div>
                 </div> 
 
@@ -77,7 +82,7 @@
     <div class="container-fluid guide py-5">
         <div class="container py-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">DIRECTION GENERALE</h5>
+                <h5 class="section-title px-3">CONSEIL D'ADMINISTRATION</h5>
                 {% comment %} <h1 class="mb-0">Meet Our Guide</h1> {% endcomment %}
             </div>
             <div class="row g-4 justify-content-center">
